# TorqueCMake

./: CMakeLists.txt  ReadMe.html  TGE Release Notes.txt
VS2005/: Torque Demo.vcproj  Torque SDK.sln  Torque Tool Lib.vcproj  build.bat  buildWad.vcproj  dtsSDK.vcproj  dtsSDKPlus.vcproj  fonttool.vcproj  glu2d3d.vcproj  langc.vcproj  ljpeg.vcproj  lpng.vcproj  lungif.vcproj  map2dif plus.vcproj  map2dif.vcproj  max2dtsExporterPlus_Max7.vcproj  max2dtsExporterPro_Max7.vcproj  max2dtsExporter_Max4.vcproj  maya2dtsExporter_Maya6.vcproj  maya2dtsExporter_Maya7.vcproj  ms2dtsExporter.vcproj  opengl2d3d.vcproj  zlib.vcproj
doc/doxygen/html/: footer.html  header.html
engine/: CMakeLists.txt
engine/audio/: audio.cc  audioBuffer.cc  audioDataBlock.cc  audioDataBlock.h  vorbisStream.cc
engine/console/: console.cc  console.h  consoleFunctions.cc  consoleObject.cc  simBase.cc  simBase.h  simManager.cc
engine/core/: fileObject.cc  nStream.cc  resManager.cc  resManager.h  theoraPlayer.cc
engine/dgl/: dgl.cc  gTexManager.cc  gTexManager.h  materialList.cc
engine/game/: game.cc  gameConnection.cc  item.cc  item.h  main.cc  objectTypes.h  player.cc  player.h  projectile.cc  shapeBase.cc  shapeBase.h  shapeImage.cc  tsStatic.cc  tsStatic.h
engine/game/fps/: guiShapeNameHud.cc
engine/gui/containers/: guiTabBookCtrl.cc  guiTabBookCtrl.h  guiWindowCtrl.cc
engine/gui/controls/: guiBitmapButtonCtrl.cc  guiBitmapCtrl.cc  guiButtonBaseCtrl.cc  guiButtonBaseCtrl.h  guiMLTextCtrl.cc  guiPopUpCtrl.cc  guiTabPageCtrl.cc  guiTabPageCtrl.h  guiTextCtrl.cc  guiTextEditCtrl.cc  guiTextListCtrl.cc
engine/gui/core/: guiCanvas.cc  guiControl.cc  guiControl.h  guiTSControl.cc  guiTypes.cc  guiTypes.h
engine/gui/editor/: guiInspector.cc
engine/gui/shiny/: guiEffectCanvas.cc
engine/platform/: gameInterface.cc  platform.h  platformAL.h  platformGL.h  platformVideo.h  profiler.cc  types.codewarrior.h  types.gcc.h  types.visualc.h  typesWin32.h
engine/platformWin32/: winConsole.cc  winD3DVideo.cc  winDInputDevice.cc  winFileio.cc  winFont.cc  winGL.cc  winMemory.cc  winOGLVideo.cc  winStrings.cc  winWindow.cc
engine/sceneGraph/: sceneGraph.cc  sceneState.cc
engine/sim/: actionMap.cc  sceneObject.cc
engine/terrain/: sky.cc  terrRender.cc
engine/ts/: tsMesh.cc  tsMesh.h  tsShapeInstance.cc  tsShapeInstance.h
example/: Starter.FPS Dedicated.bat  Starter.FPS.bat  Starter.Racing.bat  Tutorial.Base.bat
example/starter.fps/client/: init.cs
example/starter.fps/client/scripts/: default.bind.cs  optionsDlg.cs
example/starter.fps/client/ui/: joinServerGui.gui  mainMenuGui.gui  playGui.gui
example/starter.fps/data/: init.cs
example/starter.fps/data/missions/: barebones.mis  cpdemo1.mis  cpdemo2.mis  sgLightingPackDemo.mis  stronghold.mis
example/starter.fps/server/scripts/: aiPlayer.cs  crossbow.cs  envAudioProfiles.cs  environment.cs  game.cs  health.cs  sgExamples.cs  weapon.cs
example/starter.racing/client/: init.cs
example/starter.racing/client/scripts/: default.bind.cs  optionsDlg.cs  playGui.cs
example/starter.racing/client/ui/: StartupGui.gui  aboutDlg.gui  mainMenuGui.gui  playGui.gui
example/starter.racing/data/missions/: racing.mis
example/starter.racing/data/skies/: sky_sunset1.dml
example/starter.racing/server/scripts/: car.cs
example/tutorial.base/client/ui/: mainMenuGui.gui  playGui.gui
example/tutorial.base/server/: game.cs
lib/: CMakeLists.txt
lib/dtsSDK/: DTSMatrix.cpp  DTSMatrix.h  DTSMesh.cpp  DTSMesh.h  DTSQuaternion.cpp  DTSShape.cpp  DTSVector.h
lib/dtsSDKPlus/: DTSDecimator.cpp  DTSPlusTypes.h  DTSUtil.cpp  DTSUtil.h  ShapeMimic.cpp  appConfig.cpp  appConfig.h  appMesh.cpp  appNode.cpp  appNode.h  appSceneEnum.cpp  appSceneEnum.h  appSequence.cpp  appTime.cpp
lib/dtsSDKPlus/nvtristrip/: NvTriStripObjects.cpp  NvTriStripObjects.h
lib/ljpeg/: jconfig.cw.mac.h
lib/maxsdk40/: imtl.h
lib/maxsdk70/include/: bitmap.h  imtl.h
lib/opengl2d3d/: opengl2d3d.cc
tools/: targets.buildWad.mk  targets.fonttool.mk  targets.langc.mk  targets.map2dif.mk  targets.map2difPlus.mk  targets.max2dtsExporter.mk  targets.max2mapExporter.mk
tools/fonttool/: fonttool.cc
tools/map2dif/: bspNode.cc  createLightmaps.cc  createLightmaps.h  csgBrush.cc  csgBrush.h  editGeometry.cc  editGeometry.h  entityTypes.cc  entityTypes.h  exportGeometry.cc  lmapPacker.cc  lmapPacker.h  main.cc
tools/map2difPlus/: bspNode.cc  bspNode.h  convert.cc  convert.h  createLightmaps.cc  createLightmaps.h  csgBrush.cc  csgBrush.h  editFloorPlanRes.cc  editGeometry.cc  editGeometry.h  editInteriorRes.cc  entityTypes.cc  entityTypes.h  exportGeometry.cc  lmapPacker.cc  main.cc  morianUtil.cc  morianUtil.h  navGraph.cc  torque.fgd
tools/max2dtsExporter/: exporter.rc
tools/max2dtsExporterPlus/: max2dtsExporterPlus.cpp  max2dtsExporterPlus.rc  maxAppMesh.cpp
tools/max2dtsExporterPro/: DllEntry.cpp  max2dtsExporterPro.cpp  max2dtsExporterPro.def  max2dtsExporterPro.rc  maxAppMesh.cpp  maxAppMesh.h  maxAppNode.cpp  maxAppNode.h  resource.h  skinHelper.cpp
tools/max2dtsExporterPro/max_install/: liscense.txt  readme.txt
tools/maya2dtsExporter/: exportDTSCmd.cpp  mayaAppMesh.cpp  mayaAppNode.cpp
tools/ms2dtsExporter/: DTSMilkshapeMesh.h  DTSMilkshapeShape.h  DTSPlugin.cpp  DTSPlugin.h  resource.rc
tools/ms2dtsExporter/msLIB/: msLib.h  msPlugIn.h
vc6/: Torque Demo.dsp  Torque Lib.dsp  map2dif plus.dsp  maya2dtsExporter_Maya4.dsp  maya2dtsExporter_Maya5.dsp  opengl2d3d.dsp
vc7/: Torque Demo.vcproj  Torque SDK.sln  Torque Tool Lib.vcproj  build.bat  buildWad.vcproj  dtsSDK.vcproj  dtsSDKPlus.vcproj  fonttool.vcproj  glu2d3d.vcproj  langc.vcproj  ljpeg.vcproj  lpng.vcproj  lungif.vcproj  map2dif plus.vcproj  map2dif.vcproj  max2dtsExporterPlus_Max4.vcproj  max2dtsExporterPlus_Max7.vcproj  max2dtsExporterPro_Max7.vcproj  max2dtsExporter_Max3.vcproj  max2dtsExporter_Max4.vcproj  max2mapExporter.vcproj  maya2dtsExporter_Maya5.vcproj  maya2dtsExporter_Maya6.vcproj  maya2dtsExporter_Maya7.vcproj  ms2dtsExporter.vcproj  opengl2d3d.vcproj  texture2bm8.vcproj  zlib.vcproj
(+9 files in other folders)
