cmake_minimum_required(VERSION 3.8)

# default win32 rn
add_executable(engine
    # collision
    "collision/abstractPolyList.cc"
    "collision/boxConvex.cc"
    "collision/clippedPolyList.cc"
    "collision/concretePolyList.cc"
    "collision/convex.cc"
    "collision/convexBrush.cc"
    "collision/depthSortList.cc"
    "collision/earlyOutPolyList.cc"
    "collision/extrudedPolyList.cc"
    "collision/gjk.cc"
    "collision/optimizedPolyList.cc"
    "collision/planeExtractor.cc"
    "collision/polyhedron.cc"
    "collision/polytope.cc"

    # console
    "console/astAlloc.cc"
	"console/astNodes.cc"
	"console/BASscan.cc"
	"console/BASgram.cc"
	"console/codeBlock.cc"
	"console/compiledEval.cc"
	"console/compiler.cc"
	"console/console.cc"
	"console/consoleDoc.cc"
	"console/consoleFunctions.cc"
	"console/consoleInternal.cc"
	"console/consoleLogger.cc"
	"console/consoleObject.cc"
	"console/consoleParser.cc"
	"console/consoleTypes.cc"
	"console/cmdgram.cc"
	"console/CMDscan.cc"
	"console/dynamicTypes.cc"
	"console/scriptObject.cc"
	"console/simBase.cc"
	"console/simDictionary.cc"
	"console/simManager.cc"
	"console/stringStack.cc"
	"console/telnetConsole.cc"
	"console/telnetDebugger.cc"
	"console/typeValidators.cc"

    # constructor
    "constructor/constructorSimpleMesh.cc"

    # core
    "core/bitRender.cc"
	"core/bitStream.cc"
	"core/bitTables.cc"
	"core/crc.cc"
	"core/chunkFile.cc"
	"core/dataChunker.cc"
	"core/dnet.cc"
	"core/fileObject.cc"
	"core/fileStream.cc"
	"core/filterStream.cc"
	"core/findMatch.cc"
	"core/frameAllocator.cc"
	"core/idGenerator.cc"
	"core/iTickable.cc"
	"core/memStream.cc"
	"core/nStream.cc"
	"core/nTypes.cc"
	"core/resDictionary.cc"
	"core/resizeStream.cc"
	"core/resManager.cc"
	"core/stringTable.cc"
	"core/stringBuffer.cc"
	"core/tagDictionary.cc"
	"core/tokenizer.cc"
	"core/tVector.cc"
	"core/zipAggregate.cc"
	"core/zipHeaders.cc"
	"core/zipSubStream.cc"
    "core/unicode.cc"
	"core/theoraPlayer.cc"

    # dgl
	"dgl/bitmapBm8.cc"
	"dgl/bitmapBmp.cc"
	"dgl/bitmapGif.cc"
	"dgl/bitmapJpeg.cc"
	"dgl/bitmapPng.cc"
	"dgl/dgl.cc"
	"dgl/dglMatrix.cc"
	"dgl/gBitmap.cc"
	"dgl/gFont.cc"
	"dgl/gPalette.cc"
	"dgl/gTexManager.cc"
	"dgl/gVectorField.cc"
	"dgl/lensFlare.cc"
	"dgl/materialList.cc"
	"dgl/materialPropertyMap.cc"
	"dgl/splineUtil.cc"
	"dgl/stripCache.cc"
	"dgl/gDynamicTexture.cc"

    # i18n
    "i18n/lang.cc"
    "i18n/i18n.cc"

    # interior
	"interior/floorPlanRes.cc"
	"interior/forceField.cc"
	"interior/interior.cc"
	"interior/interiorCollision.cc"
	"interior/interiorDebug.cc"
	"interior/interiorInstance.cc"
	"interior/interiorIO.cc"
	"interior/interiorLightAnim.cc"
	"interior/interiorLMManager.cc"
	"interior/interiorMapRes.cc"
	"interior/interiorRender.cc"
	"interior/interiorRes.cc"
	"interior/interiorResObjects.cc"
	"interior/interiorSubObject.cc"
	"interior/itfdump.asm"
	"interior/interiorMap.cc"
	"interior/lightUpdateGrouper.cc"
	"interior/mirrorSubObject.cc"
	"interior/pathedInterior.cc"

    # math
	"math/mBox.cc"
	"math/mConsoleFunctions.cc"
	"math/mMathFn.cc"
	"math/mMath_C.cc"
	"math/mMatrix.cc"
	"math/mPlaneTransformer.cc"
	"math/mQuadPatch.cc"
	"math/mQuat.cc"
	"math/mRandom.cc"
	"math/mSolver.cc"
	"math/mSplinePatch.cc"
	"math/mathTypes.cc"
	"math/mathUtils.cc"
	"math/mMathAMD.cc"
	"math/mMathAMD_ASM.asm"
	"math/mMathSSE.cc"
	"math/mMathSSE_ASM.asm"

    # platform
	"platform/platform.cc"
	"platform/gameInterface.cc"
	"platform/platformAssert.cc"
	"platform/platformCPU.cc"
	"platform/platformCPUInfo.asm"
	"platform/platformFileIO.cc"
	"platform/platformMemory.cc"
	"platform/platformRedBook.cc"
	"platform/platformString.cc"
	"platform/platformVideo.cc"
	"platform/profiler.cc"

    # scenegraph
	"sceneGraph/detailManager.cc"
	"sceneGraph/lightManager.cc"
	"sceneGraph/sceneGraph.cc"
	"sceneGraph/sceneLighting.cc"
	"sceneGraph/sceneRoot.cc"
	"sceneGraph/sceneState.cc"
	"sceneGraph/sceneTraversal.cc"
	"sceneGraph/sgUtil.cc"
	"sceneGraph/shadowVolumeBSP.cc"
	"sceneGraph/windingClipper.cc"

    # sim
    "sim/actionMap.cc"
	"sim/connectionStringTable.cc"
	"sim/decalManager.cc"
	"sim/netConnection.cc"
	"sim/netDownload.cc"
	"sim/netEvent.cc"
	"sim/netGhost.cc"
	"sim/netInterface.cc"
	"sim/netObject.cc"
	"sim/netStringTable.cc"
	"sim/pathManager.cc"
	"sim/sceneObject.cc"
	"sim/simPath.cc"

    # terrain
	"terrain/fluidQuadTree.cc"
	"terrain/fluidRender.cc"
	"terrain/fluidSupport.cc"
	"terrain/sky.cc"
	"terrain/sun.cc"
	"terrain/blender.cc"
	"terrain/blender_asm.asm"
	"terrain/bvQuadTree.cc"
	"terrain/terrCollision.cc"
	"terrain/terrData.cc"
	"terrain/terrLighting.cc"
	"terrain/terrRender.cc"
	"terrain/waterBlock.cc"

    # ts
	"ts/tsAnimate.cc"
	"ts/tsCollision.cc"
	"ts/tsDecal.cc"
	"ts/tsDump.cc"
	"ts/tsIntegerSet.cc"
	"ts/tsLastDetail.cc"
	"ts/tsMaterialList.cc"
	"ts/tsMesh.cc"
	"ts/tsPartInstance.cc"
	"ts/tsShape.cc"
	"ts/tsShapeAlloc.cc"
	"ts/tsShapeConstruct.cc"
	"ts/tsShapeInstance.cc"
	"ts/tsShapeOldRead.cc"
	"ts/tsSortedMesh.cc"
	"ts/tsThread.cc"
	"ts/tsTransform.cc"

    # audio 
	"audio/audio.cc"
	"audio/audioBuffer.cc"
	"audio/audioDataBlock.cc"
	"audio/audioFunctions.cc"
	"audio/audioStreamSourceFactory.cc"
	"audio/oggMixedStreamSource.cc"
	"audio/vorbisStream.cc"
	"audio/vorbisStreamSource.cc"
	"audio/wavStreamSource.cc"
    
    # gui
    "gui/containers/guiCtrlArrayCtrl.cc"
	"gui/containers/guiFrameCtrl.cc"
	"gui/containers/guiPaneCtrl.cc"
	"gui/containers/guiScrollCtrl.cc"
	"gui/containers/guiStackCtrl.cc"
	"gui/containers/guiWindowCtrl.cc"
	"gui/containers/guiTabBookCtrl.cc"
	"gui/controls/guiBackgroundCtrl.cc"
	"gui/controls/guiBitmapBorderCtrl.cc"
	"gui/controls/guiBitmapButtonCtrl.cc"
	"gui/controls/guiBitmapCtrl.cc"
	"gui/controls/guiBorderButton.cc"
	"gui/controls/guiButtonBaseCtrl.cc"
	"gui/controls/guiButtonCtrl.cc"
	"gui/controls/guiCheckBoxCtrl.cc"
	"gui/controls/guiColorPicker.cc"
	"gui/controls/guiConsole.cc"
	"gui/controls/guiConsoleEditCtrl.cc"
	"gui/controls/guiConsoleTextCtrl.cc"
	"gui/controls/guiMLTextCtrl.cc"
	"gui/controls/guiMLTextEditCtrl.cc"
	"gui/controls/guiPopUpCtrl.cc"
	"gui/controls/guiRadioCtrl.cc"
	"gui/controls/guiSliderCtrl.cc"
	"gui/controls/guiTextCtrl.cc"
	"gui/controls/guiTextEditCtrl.cc"
	"gui/controls/guiTextEditSliderCtrl.cc"
	"gui/controls/guiTextListCtrl.cc"
	"gui/controls/guiTreeViewCtrl.cc"
	"gui/controls/guiTabPageCtrl.cc"
	"gui/controls/guiListBoxCtrl.cc"
    "gui/controls/guiDirectoryFileListCtrl.cc"
    "gui/controls/guiDirectoryTreeCtrl.cc"
	"gui/core/guiArrayCtrl.cc"
	"gui/core/guiCanvas.cc"
	"gui/core/guiControl.cc"
	"gui/core/guiDefaultControlRender.cc"
	"gui/core/guiTSControl.cc"
	"gui/core/guiTypes.cc"
	"gui/editor/guiControlListPopup.cc"
	"gui/editor/guiDebugger.cc"
	"gui/editor/guiEditCtrl.cc"
	"gui/editor/guiFilterCtrl.cc"
	"gui/editor/guiGraphCtrl.cc"
	"gui/editor/guiInspector.cc"
	"gui/editor/guiInspectorTypes.cc"
	"gui/editor/guiMenuBar.cc"
	"gui/game/guiAviBitmapCtrl.cc"
	"gui/game/guiChunkedBitmapCtrl.cc"
	"gui/game/guiFadeinBitmapCtrl.cc"
	"gui/game/guiMessageVectorCtrl.cc"
	"gui/game/guiProgressCtrl.cc"
	"gui/utility/guiBubbleTextCtrl.cc"
	"gui/utility/guiInputCtrl.cc"
	"gui/utility/guiMouseEventCtrl.cc"
	"gui/utility/messageVector.cc"
	"gui/utility/guiTransitionCtrl.cc"
    "gui/shiny/guiTheoraCtrl.cc"
	"gui/shiny/guiEffectCanvas.cc"
	"gui/shiny/guiTickCtrl.cc"

    # game
	"game/aiClient.cc"
	"game/aiConnection.cc"
	"game/aiPlayer.cc"
	"game/aiWheeledVehicle.cc"
	"game/ambientAudioManager.cc"
	"game/audioEmitter.cc"
	"game/badWordFilter.cc"
	"game/banList.cc"
	"game/camera.cc"
	"game/cameraSpline.cc"
	"game/collisionTest.cc"
	"game/debris.cc"
	"game/debugView.cc"
	"game/fireballAtmosphere.cc"
	"game/game.cc"
	"game/gameBase.cc"
	"game/gameConnection.cc"
	"game/gameConnectionEvents.cc"
	"game/gameConnectionMoves.cc"
	"game/gameFunctions.cc"
	"game/gameProcess.cc"
	"game/gameTSCtrl.cc"
	"game/guiNoMouseCtrl.cc"
	"game/guiPlayerView.cc"
	"game/item.cc"
	"game/main.cc"
	"game/missionArea.cc"
	"game/missionMarker.cc"
	"game/pathCamera.cc"
	"game/physicalZone.cc"
	"game/player.cc"
	"game/projectile.cc"
	"game/rigid.cc"
	"game/rigidShape.cc"
	"game/scopeAlwaysShape.cc"
	"game/shadow.cc"
	"game/shapeBase.cc"
	"game/shapeCollision.cc"
	"game/shapeImage.cc"
	"game/showTSShape.cc"
	"game/sphere.cc"
	"game/staticShape.cc"
	"game/trigger.cc"
	"game/tsStatic.cc"
	"game/version.cc"

    # game.fps
    "game/fps/guiClockHud.cc"
	"game/fps/guiCrossHairHud.cc"
	"game/fps/guiHealthBarHud.cc"
	"game/fps/guiShapeNameHud.cc"

    # game.net
	"game/net/httpObject.cc"
	"game/net/net.cc"
	"game/net/netTest.cc"
	"game/net/serverQuery.cc"
	"game/net/tcpObject.cc"

    # game.fx
	"game/fx/cameraFXMgr.cc"
	"game/fx/explosion.cc"
	"game/fx/fxFoliageReplicator.cc"
	"game/fx/fxLight.cc"
	"game/fx/fxRenderObject.cc"
	"game/fx/fxShapeReplicator.cc"
	"game/fx/fxSunLight.cc"
	"game/fx/lightning.cc"
	"game/fx/particleEmitter.cc"
	"game/fx/particleEngine.cc"
	"game/fx/precipitation.cc"
	"game/fx/splash.cc"
	"game/fx/underLava.cc"
	"game/fx/weatherLightning.cpp"
    
    # game.vehicles
	"game/vehicles/flyingVehicle.cc"
	"game/vehicles/guiSpeedometer.cc"
	"game/vehicles/hoverVehicle.cc"
	"game/vehicles/vehicle.cc"
	"game/vehicles/vehicleBlocker.cc"
	"game/vehicles/wheeledVehicle.cc"
    
    # util
    "util/frustrumCuller.cpp"
    "util/quadTreeTracer.cpp"
    "util/rectClipper.cpp"
    "util/triBoxCheck.cpp"
    "util/triRayCheck.cpp"

    # lighting system
    "lightingSystem/sgDecalProjector.cc"
	"lightingSystem/sgDetailMapping.cc"
	"lightingSystem/sgLightingModel.cc"
	"lightingSystem/sgLightManager.cc"
	"lightingSystem/sgLightMap.cc"
	"lightingSystem/sgLightObject.cc"
	"lightingSystem/sgMissionLightingFilter.cc"
	"lightingSystem/sgObjectShadows.cc"
	"lightingSystem/sgSceneLighting.cc"
	"lightingSystem/sgSceneLightingInterior.cc"
	"lightingSystem/sgSceneLightingTerrain.cc"
	"lightingSystem/sgScenePersist.cc"
	"lightingSystem/volLight.cc"

    # platform win32
    "platformWin32/winAsmBlit.cc"
	"platformWin32/winCPUInfo.cc"
	"platformWin32/winConsole.cc"
	"platformWin32/winD3DVideo.cc"
	"platformWin32/winDInputDevice.cc"
	"platformWin32/winDirectInput.cc"
	"platformWin32/winFileio.cc"
	"platformWin32/winFont.cc"
	"platformWin32/winGL.cc"
	"platformWin32/winGLSpecial.cc"
	"platformWin32/winInput.cc"
	"platformWin32/winMath.cc"
	"platformWin32/winMath_ASM.cc"
	"platformWin32/winMemory.cc"
	"platformWin32/winMutex.cc"
	"platformWin32/winNet.cc"
	"platformWin32/winOGLVideo.cc"
	"platformWin32/winOpenAL.cc"
	"platformWin32/winProcessControl.cc"
	"platformWin32/winRedbook.cc"
	"platformWin32/winSemaphore.cc"
	"platformWin32/winStrings.cc"
	"platformWin32/winThread.cc"
	"platformWin32/winTime.cc"
	"platformWin32/winV2Video.cc"
	"platformWin32/winWindow.cc"
)

find_package(OpenAL REQUIRED)
target_link_libraries(engine PRIVATE OpenAL::OpenAL)
target_include_directories(engine PRIVATE ${OPENAL_INCLUDE_DIR})